// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawTool should not render points available if tool is disabled 1`] = `
<section
  className="draw-tool"
>
  <Connect(ToggleDrawing) />
</section>
`;

exports[`DrawTool should not render summary when tool is enabled 1`] = `
<section
  className="draw-tool"
>
  <Connect(ToggleDrawing) />
  <Connect(ShapeSummary) />
</section>
`;

exports[`DrawTool should render points available if near max points 1`] = `
<section
  className="draw-tool"
>
  <Connect(ToggleDrawing) />
</section>
`;

exports[`DrawTool should render summary for 2 points 1`] = `
<section
  className="draw-tool"
>
  <Connect(ToggleDrawing) />
  <Connect(ShapeSummary) />
</section>
`;

exports[`DrawTool should render toggle drawing 1`] = `
<section
  className="draw-tool"
>
  <Connect(ToggleDrawing) />
</section>
`;
